--- a/RMDs/1_Species_localities.Rmd
+++ b/RMDs/1_Species_localities.Rmd
@@ -82,7 +82,7 @@ spp <- c("Dracaena reflexa")
 
 ```{r Download locality data from GBIF, out.width='100%', warning = F}
 # download GBIF occurrence data for this species; this takes time if there are many data points!
-gbif_download <- occ_data(scientificName = spp, hasCoordinate = TRUE, country = 'MG')
+gbif_download <- occ_data(scientificName = spp, hasCoordinate = TRUE, country = 'MG', limit = 10000)
 
 # select only the data (ignore the other metadata for now)
 gbif_data <- gbif_download$data
